<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add" android:title="@string/menu_add" android:orderInCategory="0" />
    <item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:orderInCategory="2" />
    <item android:id="@+id/menu_exit" android:title="@string/menu_exit" android:orderInCategory="3" />
    <item android:id="@+id/menu_statistics" android:title="@string/menu_statistics" android:orderInCategory="1">
	    <menu>
		    <item android:id="@+id/menu_statistics_price" android:title="@string/price_chart" />
		    <item android:id="@+id/menu_statistics_liters" android:title="@string/liters_chart" />
		    <item android:id="@+id/menu_statistics_summary" android:title="@string/summary" />
	    </menu>
    </item>
</menu>