<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/main"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="6dip">
	<TextView android:text="@string/menu_settings" android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:padding="8dip" android:textSize="18dip" android:textStyle="bold" android:gravity="center" />
	<TextView android:layout_height="15dip" android:layout_width="fill_parent" />
	<TextView 
		android:text="@string/diesel_l_km"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:textStyle="bold"
		android:gravity="center" />
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" 
		android:layout_width="fill_parent" android:gravity="center">
		<Button 
			android:text="@string/button_minus" 
			android:id="@+id/button_minus" 
			android:layout_width="50dip" 
			android:layout_height="50dip"
			android:textStyle="bold"
			android:textSize="14dip"
			android:gravity="center" />
		<EditText 
			android:text="6"
			android:id="@+id/value" 
			android:layout_width="60dip" 
			android:layout_height="50dip"
			android:paddingTop="1dip"
			android:gravity="center"
			android:editable="false"
			android:enabled="false" />
		<Button 
			android:text="@string/button_plus" 
			android:id="@+id/button_plus" 
			android:layout_width="50dip" 
			android:layout_height="50dip"
			android:textStyle="bold"
			android:textSize="14dip"
			android:gravity="center" />
	</LinearLayout>
		<TextView 
		android:text="@string/pb_l_km"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:textStyle="bold"
		android:gravity="center" />
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" 
		android:layout_width="fill_parent" android:gravity="center">
		<Button 
			android:text="@string/button_minus" 
			android:id="@+id/button_minus_pb" 
			android:layout_width="50dip" 
			android:layout_height="50dip"
			android:textStyle="bold"
			android:textSize="14dip"
			android:gravity="center" />
		<EditText 
			android:text="6"
			android:id="@+id/value_pb" 
			android:layout_width="60dip" 
			android:layout_height="50dip"
			android:paddingTop="1dip"
			android:gravity="center"
			android:editable="false"
			android:enabled="false" />
		<Button 
			android:text="@string/button_plus" 
			android:id="@+id/button_plus_pb" 
			android:layout_width="50dip" 
			android:layout_height="50dip"
			android:textStyle="bold"
			android:textSize="14dip"
			android:gravity="center" />
	</LinearLayout>
	<TextView android:layout_height="15dip" android:layout_width="fill_parent" />
	<TextView 
		android:text="@string/fuel_type"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:textStyle="bold"
		android:gravity="center" />
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center">
		<ImageButton  
			android:id="@+id/button_diesel" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:src="@drawable/diesel"
			android:gravity="center" />
		<ImageButton  
			android:id="@+id/button_95" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:src="@drawable/fuel95"
			android:gravity="center" />
		<ImageButton  
			android:id="@+id/button_98" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:src="@drawable/fuel98"
			android:gravity="center" />
		<ImageButton  
			android:id="@+id/button_lpg" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:src="@drawable/lpg"
			android:gravity="center"
			android:clickable="false" />
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:gravity="bottom">
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:gravity="center">
			<Button 
				android:text="@string/menu_backup" 
				android:id="@+id/button_backup" 
				android:layout_width="fill_parent" 
				android:layout_height="60dip"
				android:layout_weight="3"
				android:gravity="center" />
			<Button 
				android:text="@string/menu_restore" 
				android:id="@+id/button_restore" 
				android:layout_width="fill_parent" 
				android:layout_height="60dip"
				android:layout_weight="3"
				android:gravity="center" />
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:gravity="center">
			<Button 
				android:text="@string/button_reset" 
				android:id="@+id/button_reset" 
				android:layout_width="fill_parent" 
				android:layout_height="60dip"
				android:layout_weight="3"
				android:gravity="center" />
			<Button 
				android:text="@string/button_gesture_remove" 
				android:id="@+id/button_gesture_remove" 
				android:layout_width="fill_parent" 
				android:layout_height="60dip"
				android:layout_weight="3"
				android:gravity="center" />
			<Button 
				android:text="@string/button_close" 
				android:id="@+id/button_close" 
				android:layout_width="fill_parent" 
				android:layout_height="60dip"
				android:layout_weight="3"
				android:gravity="center" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>